@@ -28,8 +28,12 @@ import com.transformuk.hee.tis.tcs.api.enumeration.PostSiteType;
 import com.transformuk.hee.tis.tcs.api.enumeration.PostSpecialtyType;
 import com.transformuk.hee.tis.tcs.api.enumeration.SpecialtyType;
 import com.transformuk.hee.tis.tcs.client.service.impl.TcsServiceImpl;
+import java.time.Clock;
+import java.time.Instant;
 import java.time.LocalDate;
-import java.util.ArrayList;
+import java.time.Month;
+import java.time.ZoneOffset;
+import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
@@ -37,20 +41,23 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-@RunWith(MockitoJUnitRunner.class)
-public class PostCreateTransformerServiceTest {
+@ExtendWith(MockitoExtension.class)
+class PostCreateTransformerServiceTest {
 
+  private static final Clock CLOCK = Clock
+      .fixed(Instant.parse("1970-10-08T10:52:05Z"), ZoneOffset.UTC);
   private static final long DAY_IN_MILLIS = 86400000L;
   private static final UUID FUNDING_SUBTYPE_ID = UUID.randomUUID();
   private static final UUID FUNDING_REASON_ID = UUID.randomUUID();
+
   private PostCreateTransformerService service;
 
   @Mock
@@ -88,13 +95,15 @@ public class PostCreateTransformerServiceTest {
   private FundingTypeDTO fundingType1;
   private FundingSubTypeDto fundingSubTypeDto1;
   private FundingReasonDto fundingReason;
+  private FundingTypeDTO fundingType2;
 
   @Captor
   private ArgumentCaptor<List<PostDTO>> dtoCaptor;
 
-  @Before
-  public void setUp() {
+  @BeforeEach
+  void setUp() {
     service = new PostCreateTransformerService(referenceService, tcsService);
+    service.setClock(CLOCK);
 
     xls1 = new PostCreateXls();
     xls1.setNationalPostNumber("npn1");
@@ -118,7 +127,7 @@ public class PostCreateTransformerServiceTest {
     xls2.setEmployingBody("employingBody2");
     xls2.setProgrammeTisId("3;4");
     xls2.setOwner("owner2");
-    xls2.setFundingType("funding1");
+    xls2.setFundingType("funding2");
     xls2.setFundingStartDate(new Date(1L));
 
     xlsList = List.of(xls1, xls2);
@@ -194,6 +203,10 @@ public class PostCreateTransformerServiceTest {
     fundingType1.setStatus(Status.CURRENT);
     fundingType1.setLabel("funding1");
     fundingType1.setId(1L);
+    fundingType2 = new FundingTypeDTO();
+    fundingType2.setStatus(Status.CURRENT);
+    fundingType2.setLabel("funding2");
+    fundingType2.setId(2L);
 
     fundingSubTypeDto1 = new FundingSubTypeDto();
     fundingSubTypeDto1.setLabel("fundingSubtype1");
@@ -207,7 +220,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenNpnDuplicated() {
+  void shouldFailValidationWhenNpnDuplicated() {
     // Given.
     xls2.setNationalPostNumber("npn1");
 
@@ -226,7 +239,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenNpnAlreadyExists() {
+  void shouldFailValidationWhenNpnAlreadyExists() {
     // Given.
     PostDTO post1 = new PostDTO();
     post1.setNationalPostNumber("npn1");
@@ -283,7 +296,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentSpecialtyNotFound() {
+  void shouldFailValidationWhenCurrentSpecialtyNotFound() {
     // Given.
     xls2.setOtherSpecialties("specialty3;specialty4");
     PostCreateXls xls3 = new PostCreateXls();
@@ -314,13 +327,14 @@ public class PostCreateTransformerServiceTest {
     assertThat("The success flag did not match the expected value.", xls2.isSuccessfullyImported(),
         is(false));
     assertThat("The error did not match the expected value.", xls3.getErrorMessage(),
-        is("One of the following Sub specialties is not a CURRENT specialty of type SUB_SPECIALTY: 'specialty5\",\"specialty6'."));
+        is("One of the following Sub specialties is not a CURRENT specialty of type "
+            + "SUB_SPECIALTY: 'specialty5\",\"specialty6'."));
     assertThat("The success flag did not match the expected value.", xls3.isSuccessfullyImported(),
         is(false));
   }
 
   @Test
-  public void shouldFailValidationWhenTryingToUseSpecialtyNotOfTypeSubspecialtyAsPostSubSpecialty() {
+  void shouldFailValidationWhenTryingToUseSpecialtyNotOfTypeSubspecialtyAsPostSubSpecialty() {
     // Given.
 
     // Should be uploaded successfully
@@ -332,10 +346,6 @@ public class PostCreateTransformerServiceTest {
     xls1.setSubSpecialties("specialty3");
 
     // Should not be uploaded and have error
-    SpecialtyDTO specialty4 = new SpecialtyDTO();
-    specialty4.setStatus(com.transformuk.hee.tis.tcs.api.enumeration.Status.CURRENT);
-    specialty4.setName("specialty4");
-    specialty4.setSpecialtyTypes(new HashSet<>(Collections.singletonList(SpecialtyType.PLACEMENT)));
     xls2.setSubSpecialties("specialty4");
 
     when(referenceService.findSitesByName(any())).thenReturn(List.of(site1, site2));
@@ -345,13 +355,13 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(tcsService.getSpecialtyByName("specialty1"))
-        .thenReturn(Collections.singletonList((specialty1)));
-
+    when(tcsService.getSpecialtyByName(any()))
+        .thenReturn(Collections.singletonList(specialty1))
+        .thenReturn(List.of());
     when(tcsService.getSpecialtyByName("specialty3", SpecialtyType.SUB_SPECIALTY))
         .thenReturn(Collections.singletonList(specialty3));
     when(tcsService.getSpecialtyByName("specialty4", SpecialtyType.SUB_SPECIALTY))
-        .thenReturn(new ArrayList<>());
+        .thenReturn(List.of());
     when(referenceService.findCurrentFundingTypesByLabelIn(any()))
         .thenReturn(Collections.singletonList(fundingType1));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
@@ -373,7 +383,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentSiteNotFound() {
+  void shouldFailValidationWhenCurrentSiteNotFound() {
     // Given.
     xls2.setOtherSites("site3;site4");
 
@@ -401,7 +411,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentTrainingBodyNotFound() {
+  void shouldFailValidationWhenCurrentTrainingBodyNotFound() {
     // Given.
     trainingBody1.setStatus(Status.INACTIVE);
 
@@ -410,8 +420,10 @@ public class PostCreateTransformerServiceTest {
     when(referenceService.findSitesByName(any())).thenReturn(List.of(site1, site2));
     when(referenceService.findCurrentTrustsByTrustKnownAsIn(any()))
         .thenReturn(List.of(trainingBody1, employingBody1, employingBody2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -430,7 +442,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentEmployingBodyNotFound() {
+  void shouldFailValidationWhenCurrentEmployingBodyNotFound() {
     // Given.
     employingBody1.setStatus(Status.INACTIVE);
 
@@ -439,8 +451,10 @@ public class PostCreateTransformerServiceTest {
     when(referenceService.findSitesByName(any())).thenReturn(List.of(site1, site2));
     when(referenceService.findCurrentTrustsByTrustKnownAsIn(any()))
         .thenReturn(List.of(trainingBody1, trainingBody2, employingBody1));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -459,7 +473,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenProgrammeIdNotNumeric() {
+  void shouldFailValidationWhenProgrammeIdNotNumeric() {
     // Given.
     xls1.setProgrammeTisId("id1");
     xls2.setProgrammeTisId("id2");
@@ -469,8 +483,10 @@ public class PostCreateTransformerServiceTest {
     when(referenceService.findSitesByName(any())).thenReturn(List.of(site1, site2));
     when(referenceService.findCurrentTrustsByTrustKnownAsIn(any()))
         .thenReturn(List.of(trainingBody1, trainingBody2, employingBody1, employingBody2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -489,7 +505,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentProgrammeNotFound() {
+  void shouldFailValidationWhenCurrentProgrammeNotFound() {
     // Given.
     programme1.setStatus(com.transformuk.hee.tis.tcs.api.enumeration.Status.INACTIVE);
 
@@ -500,8 +516,10 @@ public class PostCreateTransformerServiceTest {
         .thenReturn(List.of(trainingBody1, trainingBody2, employingBody1, employingBody2));
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -520,7 +538,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenCurrentOwnerNotFound() {
+  void shouldFailValidationWhenCurrentOwnerNotFound() {
     // Given.
     owner1.setStatus(Status.INACTIVE);
     owner2.setStatus(Status.INACTIVE);
@@ -533,8 +551,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -553,7 +573,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenOldPostNotFound() {
+  void shouldFailValidationWhenOldPostNotFound() {
     // Given.
     xls1.setOldPost("oldPost1");
     xls2.setOldPost("oldPost2");
@@ -572,8 +592,10 @@ public class PostCreateTransformerServiceTest {
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
     when(tcsService.findPostsByNationalPostNumbersIn(any()))
         .thenReturn(Collections.singletonList(post1));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
         Collections.singletonList(fundingReason));
 
@@ -591,7 +613,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenPostFundingDatesInvalid() {
+  void shouldFailValidationWhenPostFundingDatesInvalid() {
     // Given.
     xls1.setFundingStartDate(new Date(2 * DAY_IN_MILLIS));
     xls1.setFundingEndDate(new Date(DAY_IN_MILLIS));
@@ -605,8 +627,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
 
     // When.
     service.processUpload(xlsList);
@@ -619,7 +643,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldNotThrowAnyErrorWhenPostFundingEndDateIsAfterStartDate() {
+  void shouldNotThrowAnyErrorWhenPostFundingEndDateIsAfterStartDate() {
     // Given.
     xls1.setFundingStartDate(new Date(DAY_IN_MILLIS));
     xls1.setFundingEndDate(new Date(2 * DAY_IN_MILLIS));
@@ -649,7 +673,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenPostFundingBodyInvalid() {
+  void shouldFailValidationWhenPostFundingBodyInvalid() {
     // Given.
     xls1.setFundingType("funding1");
     xls1.setFundingBody("funder1");
@@ -662,8 +686,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
 
     // When.
     service.processUpload(xlsList);
@@ -676,7 +702,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenPostFundingDetailsProvidedButNotAllowed() {
+  void shouldFailValidationWhenPostFundingDetailsProvidedButNotAllowed() {
     // Given.
     xls1.setFundingType("funding1");
     xls1.setFundingDetails("boom!");
@@ -689,8 +715,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
 
     // When.
     service.processUpload(xlsList);
@@ -703,7 +731,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenPostFundingSubtypeNotMatchFundingType() {
+  void shouldFailValidationWhenPostFundingSubtypeNotMatchFundingType() {
     // Given.
     xls1.setFundingType("funding1");
     xls1.setFundingSubtype("boom!");
@@ -715,8 +743,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingSubTypesForFundingTypeId(any())).thenReturn(
         Collections.emptyList());
 
@@ -731,7 +761,34 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldFailValidationWhenFundingReasonNotFound() {
+  void shouldFailValidationWhenPostFundingSubtypeMissing() {
+    when(referenceService.findGradesByName(any())).thenReturn(List.of(grade1, grade2));
+    when(tcsService.getSpecialtyByName(any())).thenReturn(List.of(specialty1, specialty2));
+    when(referenceService.findSitesByName(any())).thenReturn(List.of(site1, site2));
+    when(referenceService.findCurrentTrustsByTrustKnownAsIn(any()))
+        .thenReturn(List.of(trainingBody1, trainingBody2, employingBody1, employingBody2));
+    when(tcsService.findProgrammesIn(any()))
+        .thenReturn(List.of(programme1, programme2, programme3, programme4));
+    when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
+    when(referenceService.findCurrentFundingSubTypesForFundingTypeId(1L)).thenReturn(
+        Collections.singletonList(fundingSubTypeDto1));
+    when(referenceService.findCurrentFundingSubTypesForFundingTypeId(2L)).thenReturn(
+        Collections.emptyList());
+
+    service.processUpload(xlsList);
+
+    assertThat(xls1.getErrorMessage(),
+        is(PostFundingUpdateTransformerService.FUNDING_TYPE_REQUIRES_SUBTYPE));
+    assertThat(xls1.isSuccessfullyImported(),
+        is(false));
+  }
+
+  @Test
+  void shouldFailValidationWhenFundingReasonNotFound() {
     // Given.
     xls1.setFundingReason("notARealReason");
     when(referenceService.findGradesByName(any())).thenReturn(List.of(grade1, grade2));
@@ -742,8 +799,10 @@ public class PostCreateTransformerServiceTest {
     when(tcsService.findProgrammesIn(any()))
         .thenReturn(List.of(programme1, programme2, programme3, programme4));
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
 
     // When.
     service.processUpload(xlsList);
@@ -754,7 +813,7 @@ public class PostCreateTransformerServiceTest {
   }
 
   @Test
-  public void shouldCreatePostsWhenValidationPasses() {
+  void shouldCreatePostsWhenValidationPasses() {
     // Given.
     xls1.setTrainingDescription("trainingDescription1");
     xls1.setOtherGrades("grade1;grade2");
@@ -765,6 +824,7 @@ public class PostCreateTransformerServiceTest {
     xls1.setFundingDetails("included");
     xls1.setFundingSubtype("fundingSubtype1");
     fundingType1.setAllowDetails(true);
+    xls2.setFundingEndDate(Date.from(CLOCK.instant().minus(1, ChronoUnit.DAYS)));
 
     SpecialtyDTO specialty3 = new SpecialtyDTO();
     specialty3.setName("specialty3");
@@ -785,8 +845,10 @@ public class PostCreateTransformerServiceTest {
     when(referenceService.findLocalOfficesByName(any())).thenReturn(List.of(owner1, owner2));
     when(tcsService.findPostsByNationalPostNumbersIn(any()))
         .thenReturn(Collections.singletonList(post1));
-    when(referenceService.findCurrentFundingTypesByLabelIn(any())).thenReturn(
-        Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding1")))
+        .thenReturn(Collections.singletonList(fundingType1));
+    when(referenceService.findCurrentFundingTypesByLabelIn(Collections.singleton("funding2")))
+        .thenReturn(Collections.singletonList(fundingType2));
     when(referenceService.findCurrentFundingSubTypesForFundingTypeId(any())).thenReturn(
         Collections.singletonList(fundingSubTypeDto1));
     when(referenceService.findCurrentFundingReasonsByReasonIn(any())).thenReturn(
@@ -821,7 +883,7 @@ public class PostCreateTransformerServiceTest {
     ).collect(Collectors.toSet()));
     PostFundingDTO expectedFunding1 = new PostFundingDTO();
     expectedFunding1.setFundingType("funding1");
-    expectedFunding1.setStartDate(LocalDate.of(1970, 1, 1));
+    expectedFunding1.setStartDate(LocalDate.of(1970, Month.JANUARY, 1));
     expectedFunding1.setInfo("included");
     expectedFunding1.setFundingSubTypeId(FUNDING_SUBTYPE_ID);
     expectedFunding1.setFundingReasonId(FUNDING_REASON_ID);
@@ -839,8 +901,9 @@ public class PostCreateTransformerServiceTest {
     expected2.specialties(
         Collections.singleton(new PostSpecialtyDTO(null, specialty2, PostSpecialtyType.PRIMARY)));
     PostFundingDTO expectedFunding2 = new PostFundingDTO();
-    expectedFunding2.setFundingType("funding1");
-    expectedFunding2.setStartDate(LocalDate.of(1970, 1, 1));
+    expectedFunding2.setFundingType("funding2");
+    expectedFunding2.setStartDate(LocalDate.of(1970, Month.JANUARY, 1));
+    expectedFunding2.setEndDate(LocalDate.of(1970, Month.OCTOBER, 7));
     expected2.addFunding(expectedFunding2);
 
     // When.
